--- a/test.html
+++ b/test.html
@@ -658,7 +658,7 @@
                                 </div></a></li>
                             <li class="c-item__entry1"><a class="entry1_link" href="https://www.phiten.com/news/athlete/20200210/">
                                 <div class="entry1_img">
-                                  <span style="background-image:url(/design/img/cmn/noimage/noimg548-358.jpg)" role="img" aria-label="羽生結弦選手「フィギュアスケート 四大陸選手権」初優勝、『スーパースラム』達成おめでとう！"></span>
+                                  <span style="background-image:url(./design/img/cmn/noimage/noimg548-358.jpg)" role="img" aria-label="羽生結弦選手「フィギュアスケート 四大陸選手権」初優勝、『スーパースラム』達成おめでとう！"></span>
                                 </div>
                                 <div class="entry1_inner">
                                   <div class="entry1_meta">
@@ -1014,7 +1014,7 @@
               <p class="sp_txt">ファイテンの魅力をお伝えする特集コンテンツです。</p>
             </div>
             <div class="p-top__overture">
-              <div class="p-top__ovt_hanyu"><a class="hanyu_pcimg hidden_spm c-alpha" href="./hanyu-project/socks/" target="_blank"><span style="background-image:url(/design/img/top/overture/bg-hanyu.jpg)" role="img" aria-label="羽生結弦×phiten 僕の愛用するソックスはファイテン。 AQUA TITAN SOCKS EARTH MODEL"></span></a>
+              <div class="p-top__ovt_hanyu"><a class="hanyu_pcimg hidden_spm c-alpha" href="./hanyu-project/socks/" target="_blank"><span style="background-image:url(./design/img/top/overture/bg-hanyu.jpg)" role="img" aria-label="羽生結弦×phiten 僕の愛用するソックスはファイテン。 AQUA TITAN SOCKS EARTH MODEL"></span></a>
                 <div class="l-inner visible_spm">
                   <div class="inner"><a href="./hanyu-project/socks/" target="_blank"><img src="./design/img/top/overture/img-hanyu.jpg" alt="羽生結弦×phiten 僕の愛用するソックスはファイテン。 AQUA TITAN SOCKS EARTH MODEL" width="345"></a>
                     <div class="ovt_texts">
@@ -1171,13 +1171,13 @@
                     <div class="inner">
                       <div class="c-list__entry3">
                         <div class="c-item__entry3"><a class="entry3_link" href="http://www.yukobeauty.com/" target="_blank">
-                            <div class="entry3_img"><span style="background-image:url(/design/img/top/business/beauty/img01.jpg)" role="img" aria-label="YUKO"></span></div>
+                            <div class="entry3_img"><span style="background-image:url(./design/img/top/business/beauty/img01.jpg)" role="img" aria-label="YUKO"></span></div>
                             <div class="entry3_inner">
                               <div class="entry3_title">YUKO</div>
                               <div class="entry3_text">すべての髪のために。健やかで美しい髪に必要な製品と技術を提供</div>
                             </div></a></div>
                         <div class="c-item__entry3"><a class="entry3_link" href="http://www.yukoyamashita.com/" target="_blank">
-                            <div class="entry3_img"><span style="background-image:url(/design/img/top/business/beauty/img02.jpg)" role="img" aria-label="YUKO YAMASHITA HAIR STEAIGHTENING"></span></div>
+                            <div class="entry3_img"><span style="background-image:url(./design/img/top/business/beauty/img02.jpg)" role="img" aria-label="YUKO YAMASHITA HAIR STEAIGHTENING"></span></div>
                             <div class="entry3_inner">
                               <div class="entry3_title">山下ユウコ YUKO YAMASHITA<br>HAIR STRAIGHTENING</div>
                               <div class="entry3_text">ヘアストレートエキスパート山下ユウコのWEB</div>
@@ -1190,13 +1190,13 @@
                     <div class="inner">
                       <div class="c-list__entry3">
                         <div class="c-item__entry3"><a class="entry3_link" href="https://www.phiten.com/kyono-oshiroiotoshi/" target="_blank">
-                            <div class="entry3_img"><span style="background-image:url(/design/img/top/business/beauty/img03.jpg)" role="img" aria-label="京のおしろい落とし"></span></div>
+                            <div class="entry3_img"><span style="background-image:url(./design/img/top/business/beauty/img03.jpg)" role="img" aria-label="京のおしろい落とし"></span></div>
                             <div class="entry3_inner">
                               <div class="entry3_title">京のおしろい落とし</div>
                               <div class="entry3_text">京都・宮川町の芸舞妓さんが認める純金水を使用した基礎化粧品</div>
                             </div></a></div>
                         <div class="c-item__entry3"><a class="entry3_link" href="https://phiten-aquagold.com/" target="_blank">
-                            <div class="entry3_img"><span style="background-image:url(/design/img/top/business/beauty/img04.jpg)" role="img" aria-label="ファイテン アクアゴールド"></span></div>
+                            <div class="entry3_img"><span style="background-image:url(./design/img/top/business/beauty/img04.jpg)" role="img" aria-label="ファイテン アクアゴールド"></span></div>
                             <div class="entry3_inner">
                               <div class="entry3_title">ファイテン アクアゴールド</div>
                               <div class="entry3_text">すべての女性に真の美しさを。本当に実感できる化粧品</div>
