--- a/test.html
+++ b/test.html
@@ -36,7 +36,7 @@
 <link rel="icon" href="./favicon.ico" type="image/x-icon">
 <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 <link rel="apple-touch-icon" href="./design/img/cmn/apple-touch-icon.png">
-<script src="https://shutto-translation-development-kawate.s3.amazonaws.com/trans.js?id=1573"></script>
+<script src="https://staging-d.ea-shutto-translation.net/trans.js?id=289"></script>
 <!-- // inc cmn-->
   </head>
   <body class="index lang-ja" id="top">
