--- a/old_stt.html
+++ b/old_stt.html
@@ -37,7 +37,7 @@
 <link rel="icon" href="./favicon.ico" type="image/x-icon">
 <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 <link rel="apple-touch-icon" href="./design/img/cmn/apple-touch-icon.png">
-<script src="https://staging-d.ea-shutto-translation.net/trans.js?id=289"></script>
+<script src="https://d.shutto-translation.com/trans.js?id=1234"></script>
 <!-- // inc cmn-->
   </head>
   <body class="index lang-ja" id="top">
